--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.view.View" alias="view"/>
         <variable name="viewModel" type="com.baibus.medicalaccreditation.auth.LoginVM"/>
     </data>
 
@@ -12,12 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.baibus.medicalaccreditation.auth.AuthActivity"
-        tools:showIn="@layout/activity_auth">
+        tools:showIn="@layout/activity_auth"
+        android:background="@android:color/white">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:fillViewport="true"
+            app:animatedVisibility="@{viewModel.isShowProgress ? view.GONE : view.VISIBLE}">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -28,44 +31,43 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                app:animatedVisibility="@{viewModel.isShowProgress ? view.GONE : view.VISIBLE}"
                 tools:visibility="visible">
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_email"
+                    app:error="@{viewModel.emailError}">
 
-                    <EditText
+                    <android.support.design.widget.TextInputEditText
                         android:id="@+id/text_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/prompt_email"
                         android:inputType="textEmailAddress"
                         android:text="@={viewModel.email}"
                         android:maxLines="1"
-                        app:onEditorActionListener="@{viewModel}"
-                        app:errorText="@{viewModel.emailError}"
                         tools:text="email"/>
+                    <!--app:onEditorActionListener="@{viewModel}"-->
 
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp">
+                    android:layout_marginTop="8dp"
+                    android:hint="@string/prompt_password"
+                    app:error="@{viewModel.passwordError}">
 
-                    <EditText
+                    <android.support.design.widget.TextInputEditText
                         android:id="@+id/edit_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/prompt_password"
                         android:imeActionId="@+id/login"
                         android:imeActionLabel="@string/action_sign_in_short"
                         android:imeOptions="actionUnspecified"
                         android:inputType="textPassword"
                         android:text="@={viewModel.password}"
                         android:maxLines="1"
-                        app:errorText="@{viewModel.passwordError}"
                         tools:text="password"/>
 
                 </android.support.design.widget.TextInputLayout>
@@ -83,7 +85,7 @@
                         android:text="@string/action_registration"
                         android:textStyle="bold"
                         android:minEms="6"
-                        app:onClick="@{() -> viewModel.showRegistration()}"/>
+                        android:onClick="@{(v) -> viewModel.showRegistration()}"/>
                     <Button
                         style="?android:textAppearanceSmall"
                         android:layout_width="0dp"
@@ -92,7 +94,7 @@
                         android:text="@string/action_sign_in"
                         android:textStyle="bold"
                         android:minEms="6"
-                        app:onClick="@{() -> viewModel.attemptLogin()}"/>
+                        android:onClick="@{(v) -> viewModel.attemptLogin()}"/>
                 </LinearLayout>
 
             </LinearLayout>
