--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            android:onClick="@{(view) -> viewModel.fabOnClick(view)}"
+            android:onClick="@{(view) -> viewModel.fabOnClick()}"
             app:srcCompat="@android:drawable/ic_dialog_email"/>
 
     </android.support.design.widget.CoordinatorLayout>
