--- a/app/src/main/res/layout/partial_content_main.xml
+++ b/app/src/main/res/layout/partial_content_main.xml
@@ -16,10 +16,10 @@
         tools:context="com.baibus.medicalaccreditation.MainActivity"
         tools:showIn="@layout/app_bar_main">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
+        <FrameLayout
+            android:id="@+id/mainFrame"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
