--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,6 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
         tools:openDrawer="start">
 
         <include
@@ -31,6 +30,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
+            app:theme="@style/ThemeOverlay.AppCompat.Light"
+            app:headerLayout="@layout/partial_nav_header_main"
             app:model="@{viewModel}"
             app:menu="@menu/activity_main_drawer"
             app:navigationItemSelectedListener="@{viewModel::onNavigationItemSelected}"/>
