--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -40,6 +40,7 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
             android:onClick="@{(view) -> viewModel.fabOnClick()}"
+            android:visibility="gone"
             app:srcCompat="@android:drawable/ic_dialog_email"/>
 
     </android.support.design.widget.CoordinatorLayout>
