--- a/app/src/main/res/layout/item_answer.xml
+++ b/app/src/main/res/layout/item_answer.xml
@@ -12,46 +12,61 @@
         <import type="android.view.View" alias="view"/>
         <variable name="itemViewModel" type="com.baibus.medicalaccreditation.common.db.entities.Answer"/>
         <variable name="listener" type="com.baibus.medicalaccreditation.testing.OnAnswerAttemptedListener"/>
+        <variable name="index" type="int"/>
     </data>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardBackgroundColor="@android:color/white"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true"
         android:onClick="@{() -> listener.onAnswerAttempted(itemViewModel)}"
         android:foreground="?android:attr/selectableItemBackground">
 
-        <com.baibus.medicalaccreditation.common.ui.custom.SquareFrameLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layout_height="200dp"
-            android:visibility='@{itemViewModel.hasFilePath ? view.VISIBLE : view.GONE}'
-            tools:visibility="visible">
+            android:layout_height="wrap_content">
 
-            <com.facebook.drawee.view.SimpleDraweeView
+            <com.baibus.medicalaccreditation.common.ui.custom.SquareFrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                fresco:placeholderImage="@drawable/side_nav_bar"
-                fresco:roundAsCircle="false"
-                bind:progressBarImage="@{progress.newInstance(0x800080FF)}"
-                bind:imageURI='@{itemViewModel.filePath}'/>
+                android:layout_height="wrap_content"
+                tools:layout_height="200dp"
+                android:visibility='@{itemViewModel.hasFilePath ? view.VISIBLE : view.GONE}'
+                tools:visibility="visible">
 
-        </com.baibus.medicalaccreditation.common.ui.custom.SquareFrameLayout>
+                <com.facebook.drawee.view.SimpleDraweeView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    fresco:placeholderImage="@drawable/side_nav_bar"
+                    bind:cornerRadius="@{(float) 8}"
+                    bind:cornerBottomLeft='@{TextUtils.isEmpty(itemViewModel.text)}'
+                    bind:cornerBottomRight='@{TextUtils.isEmpty(itemViewModel.text)}'
+                    bind:progressBarImage="@{progress.newInstance(0x800080FF)}"
+                    bind:imageURI='@{itemViewModel.filePath}'/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="?android:attr/listPreferredItemHeightSmall"
-            android:text="@{itemViewModel.text}"
-            android:gravity="center_vertical"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:visibility='@{TextUtils.isEmpty(itemViewModel.text) ? view.GONE : view.VISIBLE}'
-            android:paddingLeft="8dp"
-            android:paddingStart="8dp"
-            android:paddingRight="8dp"
-            android:paddingEnd="8dp"
-            tools:text="Текст ответа"
-            tools:visibility="gone"/>
-    </LinearLayout>
+            </com.baibus.medicalaccreditation.common.ui.custom.SquareFrameLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="?android:attr/listPreferredItemHeightSmall"
+                android:text='@{index + ") " + itemViewModel.text}'
+                android:gravity="center_vertical"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:visibility='@{TextUtils.isEmpty(itemViewModel.text) ? view.GONE : view.VISIBLE}'
+                android:paddingLeft="8dp"
+                android:paddingStart="8dp"
+                android:paddingRight="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp"
+                tools:text="Текст ответа"
+                tools:visibility="gone"/>
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 </layout>
