--- a/app/src/main/res/layout/item_result_question.xml
+++ b/app/src/main/res/layout/item_result_question.xml
@@ -21,73 +21,67 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:cardBackgroundColor="@android:color/white"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp"
-        app:cardUseCompatPadding="true"
-        android:foreground="?android:attr/selectableItemBackground">
+        app:cardUseCompatPadding="true">
 
-        <android.support.v4.widget.NestedScrollView
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:orientation="vertical"
+            <com.baibus.medicalaccreditation.common.ui.custom.SquareFrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:visibility='@{itemViewModel.question.hasFilePath ? view.VISIBLE : view.GONE}'
+                tools:layout_height="200dp"
+                tools:visibility="visible">
 
-                <com.baibus.medicalaccreditation.common.ui.custom.SquareFrameLayout
+                <com.facebook.drawee.view.SimpleDraweeView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility='@{itemViewModel.question.hasFilePath ? view.VISIBLE : view.GONE}'
-                    tools:layout_height="200dp"
-                    tools:visibility="visible">
+                    android:layout_height="match_parent"
+                    fresco:placeholderImage="@drawable/side_nav_bar"
+                    fresco:roundAsCircle="false"
+                    fresco:roundedCornerRadius="40dp"
+                    fresco:roundBottomLeft="false"
+                    fresco:roundBottomRight="false"
+                    bind:progressBarImage="@{progress.newInstance(0x800080FF)}"
+                    bind:imageURI='@{itemViewModel.question.filePath}'/>
 
-                    <com.facebook.drawee.view.SimpleDraweeView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        fresco:placeholderImage="@drawable/side_nav_bar"
-                        fresco:roundAsCircle="false"
-                        fresco:roundedCornerRadius="40dp"
-                        fresco:roundBottomLeft="false"
-                        fresco:roundBottomRight="false"
-                        bind:progressBarImage="@{progress.newInstance(0x800080FF)}"
-                        bind:imageURI='@{itemViewModel.question.filePath}'/>
+            </com.baibus.medicalaccreditation.common.ui.custom.SquareFrameLayout>
 
-                </com.baibus.medicalaccreditation.common.ui.custom.SquareFrameLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="?android:attr/listPreferredItemHeightLarge"
+                android:text="@{itemViewModel.question.text}"
+                android:gravity="center_vertical"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:visibility='@{TextUtils.isEmpty(itemViewModel.question.text) ? view.GONE : view.VISIBLE}'
+                android:paddingLeft="8dp"
+                android:paddingStart="8dp"
+                android:paddingRight="8dp"
+                android:paddingEnd="8dp"
+                tools:text="Текст вопроса"
+                tools:visibility="gone"/>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:minHeight="?android:attr/listPreferredItemHeightLarge"
-                    android:text="@{itemViewModel.question.text}"
-                    android:gravity="center_vertical"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:visibility='@{TextUtils.isEmpty(itemViewModel.question.text) ? view.GONE : view.VISIBLE}'
-                    android:paddingLeft="8dp"
-                    android:paddingStart="8dp"
-                    android:paddingRight="8dp"
-                    android:paddingEnd="8dp"
-                    tools:text="Текст вопроса"
-                    tools:visibility="gone"/>
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:items="@{itemViewModel.answers}"
+                app:itemBinding="@{itemViewModel.itemBinding}"
+                app:layoutManager="@{LayoutManagers.linear()}"
+                app:hasFixedSize="@{true}"
+                app:itemDivider="@{DividerItemDecoration.newInstance(R.drawable.divider)}"
+                app:startOffset="@{StartOffsetItemDecoration.newInstanceDimen(R.dimen.start_offset)}"
+                app:endOffset="@{EndOffsetItemDecoration.newInstanceDimen(R.dimen.end_offset)}"
+                bind:nestedScrollingEnabled='@{true}'
+                tools:listitem="@layout/item_result_answer"
+                tools:layout_height="600dp"/>
 
-                <android.support.v7.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:items="@{itemViewModel.answers}"
-                    app:itemBinding="@{itemViewModel.itemBinding}"
-                    app:layoutManager="@{LayoutManagers.linear()}"
-                    app:hasFixedSize="@{true}"
-                    app:itemDivider="@{DividerItemDecoration.newInstance(R.drawable.divider)}"
-                    app:startOffset="@{StartOffsetItemDecoration.newInstanceDimen(R.dimen.start_offset)}"
-                    app:endOffset="@{EndOffsetItemDecoration.newInstanceDimen(R.dimen.end_offset)}"
-                    bind:nestedScrollingEnabled='@{true}'
-                    tools:listitem="@layout/item_result_answer"
-                    tools:layout_height="600dp"/>
-            </LinearLayout>
-
-        </android.support.v4.widget.NestedScrollView>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
