--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorCorrect">#00FF00</color>
-    <color name="colorIncorrect">#FF0000</color>
+    <color name="colorCorrect">#49AD4D</color>
+    <color name="colorIncorrect">#F33326</color>
 </resources>
